2003-09-11  Dan Winship  <danw@ximian.com>

	* backend/ebook/Makefile.am (privlib_LTLIBRARIES): Remove
	libebook-static.la

	* conduit/Makefile.am (libeaddress_conduit_la_LIBADD): Use
	non-static versions of libraries: the static ones were only needed
	for libtool 1.3.

2003-08-26  JP Rosevear  <jpr@ximian.com>
 
 	* conduit/address-conduit.c (ecard_from_remote_record): duplicate
 	the extra address lines
	
2003-08-20  Gilbert Fang  <gilbert.fang@sun.com>

        * gui/widgets/e-addressbook-util.c
        (e_addressbook_send_card_list): use memcpy to assign
        CORBA_char_sequence instead of strcpy. (#46706)

2003-08-12  Rodrigo Moya <rodrigo@ximian.com>

	* backend/ebook/e-book.c (e_book_dispose): unref the
	EComponentListener before unloading the CORBA object.

2003-08-12  Hans Petter Jansson  <hpj@ximian.com>

	* backend/ebook/e-destination.c (e_destination_dispose): Chain.

	* gui/component/e-address-widget.c (e_address_widget_destroy): Chain.
	Prevent double frees. Prevent double GSource removal.

	* gui/component/e-cardlist-model.c (e_cardlist_model_class_init):
	Store parent class.
	(e_cardlist_model_dispose): Chain. Prevent double frees and unrefs.

	* gui/contact-editor/e-contact-editor-address.c
	(e_contact_editor_address_dispose): Chain.

	* gui/contact-editor/e-contact-editor-fullname.c
	(e_contact_editor_fullname_dispose): Chain.

	* gui/contact-list-editor/e-contact-list-editor.c
	(e_contact_list_editor_dispose): Chain.

	* gui/contact-list-editor/e-contact-list-model.c
	(contact_list_model_destroy): Chain. Prevent double frees and unrefs.

	* gui/widgets/e-addressbook-reflow-adapter.c (addressbook_dispose):
	Chain.
	(addressbook_finalize): Chain.

	* gui/widgets/e-addressbook-table-adapter.c (addressbook_dispose):
	Chain.

	* gui/widgets/e-addressbook-treeview-adapter.c (addressbook_destroy):
	Chain. Prevent double free.

	* gui/widgets/gal-view-minicard.c (gal_view_minicard_dispose):
	Chain. Prevent double free and detach.
